--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -268,31 +268,13 @@
 </script>
 {% endif %}
 
-
+<!-- 不蒜子计数 -->
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
- <div class="line text-big">
-        <div class="x2 x2-move">
-            <span id="busuanzi_container_page_pv">
-                <div class="padding border border-sub border-dotted fadein-left">
-                    本文总阅读量<span id="busuanzi_value_page_pv"></span>次
-                </div>
-            </span>
-        </div>
-        <div class="x2 x1-move">
-                <span id="busuanzi_container_site_pv">
-                    <div class="padding border border-sub border-dotted fadein-bottom">
-                        本站总访问量<span id="busuanzi_value_site_pv"></span>次
-                    </div>
-                </span>
-        </div>
-        <div class="x2 x1-move">
-            <span id="busuanzi_container_site_uv">
-                 <div class="padding border border-sub border-dotted fadein-right">
-                     本站总访客数<span id="busuanzi_value_site_uv"></span>人
-                 </div>
-            </span>
-        </div>
-  </div>
+<span id="busuanzi_container_site_pv" style='display:none'>| 本站总访问量 <span id="busuanzi_value_site_pv"></span> 次 </span>
+<span id="busuanzi_container_site_uv" style='display:none'>| 本站总访客数 <span id="busuanzi_value_site_uv"></span> 人 </span>
+<span id="busuanzi_container_page_pv" style='display:none'>| 本文总阅读量<span id="busuanzi_value_page_pv"></span> 次 </span>
+<!-- 不蒜子计数 -->
+
 
 <!-- 不蒜子计数初始值纠正 -->
 <script>
