--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -277,7 +277,7 @@
 
 
 <!-- 不蒜子计数初始值纠正 -->
-<script>
+<!-- <script>
 $(document).ready(function() {
 
     var int = setInterval(fixCount, 50);  // 50ms周期检测函数
@@ -297,4 +297,4 @@ $(document).ready(function() {
     }
 
 });
-</script>
+</script> -->
